# Proforgia

./: ..gitignore.swp  .gitignore  .gitmodules  CMakeLists.txt  Context.h  README.md  main.cpp
api/: CMakeLists.txt
api/include/: CustomerApi.h  Handler.h  UserApi.h  Worker.h
api/include/activity/: ActivityCustomer.h  ActivityManager.h  ActivityUser.h
api/include/entities/: File.h  Location.h  Room.h  Session.h  User.h
api/include/external_api/: Context.h  View.h
api/include/page/: PageCustomer.h  PageManager.h  PageUser.h
api/src/: ActivityCustomer.cpp  ActivityUser.cpp  CustomerAPI.cpp  Handler.cpp  PageCustomer.cpp  PageUser.cpp  UserApi.cpp  Worker.cpp
core/: CMakeLists.txt
core/include/: Handler.h  HttpResponse.h  Worker.h
core/include/activity/: ActivityCustomer.h  ActivityManager.h  ActivityUser.h
core/include/entities/: entities.h
core/include/external_api/: TemplateWrapper.h  View.h
core/include/page/: PageCustomer.h  PageManager.h  PageUser.h
core/src/: Handler.cpp  HttpResponse.cpp  Worker.cpp
core/src/activity/: ActivityCustomer.cpp  ActivityManager.cpp  ActivityUser.cpp
core/src/page/: PageCustomer.cpp  PageManager.cpp  PageUser.cpp
database/: CMakeLists.txt  table_creation.sql  use_samples.cpp
database/aws-sdk/: README.md
database/aws-sdk/install/lib/: libaws-c-common.1.0.0.dylib  libaws-c-event-stream.0unstable.dylib  libaws-c-event-stream.1.0.0.dylib  libaws-c-event-stream.dylib  libaws-checksums.dylib  libtesting-resources.dylib
database/aws-sdk/install/lib/aws-c-common/cmake/shared/: aws-c-common-targets-debug.cmake  aws-c-common-targets.cmake
database/aws-sdk/install/lib/aws-c-event-stream/cmake/shared/: aws-c-event-stream-targets-debug.cmake  aws-c-event-stream-targets.cmake
database/aws-sdk/install/lib/aws-checksums/cmake/shared/: aws-checksums-targets-debug.cmake  aws-checksums-targets.cmake
database/aws-sdk/install/lib/cmake/AWSSDK/: AWSSDKConfigVersion.cmake  platformDeps.cmake
database/aws-sdk/install/lib/cmake/aws-cpp-sdk-core/: aws-cpp-sdk-core-targets-debug.cmake  aws-cpp-sdk-core-targets.cmake
database/aws-sdk/install/lib/cmake/aws-cpp-sdk-s3/: aws-cpp-sdk-s3-targets-debug.cmake  aws-cpp-sdk-s3-targets.cmake
database/aws-sdk/install/lib/cmake/testing-resources/: testing-resources-config-version.cmake  testing-resources-targets-debug.cmake  testing-resources-targets.cmake
database/aws-sdk/install/lib/pkgconfig/: aws-cpp-sdk-core.pc  aws-cpp-sdk-s3.pc  testing-resources.pc
database/include/: DataManager.h
database/include/Utils/: DBEntities.h  ErrorCodes.h  InputEntities.h  Rights.h  Status.h
database/include/Wrappers/: DBWrapper.h  StorageWrapper.h
database/include/Wrappers/DBWrapperRealisations/: PostgreDBWrapper.h
database/include/Wrappers/StorageWrapperRealisations/: AmazonS3StorageWrapper.h
database/src/: AmazonS3StorageWrapper.cpp  DBEntities.cpp  DataManager.cpp  PostgreDBWrapper.cpp
network/: CMakeLists.txt
network/client/: Connection.cpp  Connection.h
network/connection/: Connection.cpp  Connection.h
network/connection_loop/: Connection_loop.cpp  Connection_loop.h
network/connection_manager/: Connection_manager.cpp  Connection_manager.h
network/connection_queue/: Connection_queue.cpp  Connection_queue.h
network/include/: Connection.h  Connection_queue.h  Parser.h  Request_handler.h  Server.h
network/parser/: Parser.cpp  Parser.h
network/reply/: Reply.cpp  Reply.h
network/request/: Request.cpp  Request.h
network/request_handler/: Request_handler.cpp  Request_handler.h
network/server/: Server.cpp  Server.h
network/src/: Connection.cpp  Connection_queue.cpp  Parser.cpp  Request_handler.cpp  Server.cpp
server/: CMakeLists.txt
server/include/: BdManager.h  Context.h  DataProcessing.h  GeneratorKey.h  Server.h  alg_assembly.h  steps.h
server/src/: GeneratorKey.cpp  Server.cpp  alg_assembly.cpp  steps.cpp  steps_bd.cpp
templates/include/: Context.h  Loader.h  Parser.h  Part.h  QueueOfPart.h  View.h
templates/src/: CMakeLists.txt  Parser.cpp  Part.cpp
tests/: tests.cpp
tests/api/: gmock_tests.cpp  http_response_tests.cpp  page_tests.cpp  worker_tests.cpp
tests/core/: http_response_tests.cpp  page_tests.cpp  worker_tests.cpp
tests/database/: postgres_wrapper_tests.cpp
tests/network/: parser_tests.cpp
wt_templates/: BaseTemplate.cpp  BaseTemplate.h  LoginTemplate.cpp  LoginTemplate.h  NLTemplate.cpp  NLTemplate.h  TemplateWrapper.cpp  TemplateWrapper.h  WTemplate-example.html
wt_templates/AddPost/: AddPostTemplate.cpp  AddPostTemplate.h
wt_templates/Login/: LoginTemplate.cpp  LoginTemplate.h
wt_templates/Main/: MainTemplate.cpp  MainTemplate.h
wt_templates/NotFound/: NotFoundTemplate.cpp  NotFoundTemplate.h
wt_templates/Profile/: ProfileTemplate.cpp  ProfileTemplate.h
wt_templates/SignUp/: SignUpTemplate.cpp  SignUpTemplate.h
wt_templates/templates/: add_post.html  login.html  main.html  not_found.html  profile.html  signup.html
wt_templates/templates/inc/: base_header.html  header.html  header_logged.html  post.html  right_block.html
wt_templates/templates/static/css/: add_post.css  login.css  main.css  profile.css  reset.css  right_block.css  signup.css  stickyheadernavbar.css
